--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+body {
+     font-family: Helvetica, Arial, sans-serif;
+     background: #333745;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+     cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+     font-size: 25px;
+     color: white;
+     text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+label {
+     color: #a5afd7;
+     font-size: 20px;
+     text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+     background: #20222b;
+     color: red;
+     text-align: center;
+     margin: auto;
+     padding: 25px 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+     display: flex;
+     align-content: center;
+     align-items: center;
+     flex-direction: column;
+     margin: 5px;
+}
+
+.form-item {
+     margin: 7px;
+}
+
+.submit-button {
+     background: #8357c5;
+     border: none;
+     color: white;
+     font-weight: bold;
+     font-size: 1.6rem;
+     padding: 2.4rem;
+     width: 100%;
+}
+
+/* Get rid of arrows in textfield*/
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+     -webkit-appearance: none;
+     margin: 0;
+}
+/* Firefox */
+input[type="number"] {
+     -moz-appearance: textfield;
 }
